--- a/src/Components/layout/Layout.module.css
+++ b/src/Components/layout/Layout.module.css
@@ -13,7 +13,7 @@
   align-items: center;
   flex-direction: row;
   height: 100px;
-  background-color: rgb(193, 198, 96);
+  background-color: #f8cb1c;
 }
 
 .route {
