--- a/src/Components/layout/Layout.module.scss
+++ b/src/Components/layout/Layout.module.scss
@@ -7,7 +7,7 @@
  flex-direction: row;
   // position: relative; 
    height: 100px;
-  background-color:rgb(193, 198, 96)
+  background-color: #f8cb1c
   }
 
 
