--- a/src/Components/Basket/Basket.module.css
+++ b/src/Components/Basket/Basket.module.css
@@ -1,7 +1,16 @@
-.cart {
+.container {
+  display: flex;
+  flex-direction: column;
+}
+
+.contend {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  width: 80%;
+  margin: auto;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
 }
 
 .onecart {
@@ -18,33 +27,26 @@
 .img {
   width: 150px;
   padding: 10px 50px;
-  height: 45%;
-}
-
-.raiting {
-  margin: 0px 20px 10px 20px;
+  height: 50%;
 }
 
 .data {
   padding: 0px 10px;
 }
 
-.like {
-  position: absolute;
-  left: 220px;
-  top: 20px;
-  size: 23k;
-  cursor: "pointer";
+.btn {
+  margin: auto;
 }
 
-.contend {
+.total {
   display: flex;
-  flex-wrap: wrap;
-  width: 80%;
-  margin: auto;
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
+  width: 100%;
+  height: 80px;
+  align-items: center;
+  justify-content: center;
+  color: black;
+  background-color: yellow;
+  font-size: 25px;
 }
 
 .back {
@@ -52,4 +54,4 @@
   background-position: center;
   background-repeat: no-repeat;
   width: 100%;
-}/*# sourceMappingURL=Products.module.css.map */
+}/*# sourceMappingURL=Basket.module.css.map */
