--- a/src/Components/layout/Layout.module.css
+++ b/src/Components/layout/Layout.module.css
@@ -20,13 +20,40 @@
   margin: 0 20px;
 }
 
+.routes a {
+  color: black;
+  font-size: 20px;
+  text-decoration: none;
+}
+
 .rightItems {
   display: flex;
   justify-content: space-between;
   width: 60%;
   align-items: center;
+  margin-right: 20px;
 }
 
 .logout {
   margin-left: 10px;
+}
+
+.basket {
+  position: relative;
+  margin: 0px 20px;
+}
+
+.number {
+  position: absolute;
+  right: 58px;
+  top: 95px;
+  font-size: 14px;
+}
+
+.sellect {
+  width: 100px;
+  height: 30px;
+  margin-right: 10px;
+  color: black;
+  font-size: 16px;
 }/*# sourceMappingURL=Layout.module.css.map */
