--- a/src/Components/Basket/Basket.module.scss
+++ b/src/Components/Basket/Basket.module.scss
@@ -6,7 +6,7 @@
 .contend{
     display: flex;
     flex-wrap: wrap;
-    width: 80%;
+    width: 995px;
     margin: auto;
     background-size: cover;
     background-position: center;
@@ -19,7 +19,7 @@
      border: 1px solid black;
      border-radius: 25px;
      margin-right: 10px;
-     margin: 20px;
+     margin: 35px;
      background-color: #f1efef;
      position: relative;
   }
