--- a/src/Components/Products/Products.module.scss
+++ b/src/Components/Products/Products.module.scss
@@ -10,9 +10,11 @@
    border: 1px solid black;
    border-radius: 25px;
    margin-right: 10px;
-   margin: 20px;
+   margin: 35px;
    background-color: #f1efef;
    position: relative;
+   
+  
 }
 
 // .relative{
@@ -52,7 +54,7 @@ cursor: 'pointer',
 .contend{
   display: flex;  
   flex-wrap: wrap;
-  width: 80%;
+  width: 995px;
     margin: auto;
     background-size: cover;
   background-position: center;
@@ -64,5 +66,6 @@ cursor: 'pointer',
   background-position: center;
   background-repeat: no-repeat;
   width: 100%;
+  margin: auto;
 }
 
