--- a/src/Components/Products/Products.module.css
+++ b/src/Components/Products/Products.module.css
@@ -1,3 +1,17 @@
+:export {
+  breakpoints_xs: 0;
+  breakpoints_sm: 361;
+  breakpoints_md: 769;
+  breakpoints_lg: 1367;
+  breakpoints_xl: 1537;
+  breakpoints_xxl: 1921;
+}
+
+.dark {
+  --bg-color:black;
+  --text-color:white;
+}
+
 .cart {
   display: flex;
   flex-wrap: wrap;
@@ -45,6 +59,11 @@
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
+}
+@media (min-width: 769px) {
+  .contend {
+    flex-direction: column;
+  }
 }
 
 .back {
