--- a/src/Components/Products/Products.module.scss
+++ b/src/Components/Products/Products.module.scss
@@ -1,3 +1,5 @@
+@import '../../responsive.scss';
+
 .cart{
   display: flex;
   flex-wrap: wrap;
@@ -59,6 +61,9 @@ cursor: 'pointer',
     background-size: cover;
   background-position: center;
   background-attachment: fixed;
+   @include md{
+    flex-direction: column;
+   }
 }
 
 .back{
